--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>groupId</groupId>
     <artifactId>Minim1</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
